# cpop_examples

./: .README.txt  .gitignore  CMakeLists.txt  README.md  build_test.sh
.cache/clangd/index/: DetectorConstruction.cc.40E5E4E3EF13A4C4.idx  DetectorConstruction.cc.65BC84F2CA770C84.idx  DetectorConstruction.cc.C1A061FDB88372C2.idx  DetectorConstruction.hh.1CBADD213605FC58.idx  DetectorConstruction.hh.70B1372DEBE8B7CD.idx  DetectorConstruction.hh.B3A7B10ABF3A2BD8.idx  DetectorConstructionMessenger.cc.05120E52E8AA3216.idx  DetectorConstructionMessenger.cc.54C0F2FD1574E846.idx  DetectorConstructionMessenger.cc.A16F59DC0CE4BF97.idx  (+15 more)
GeneratePopulation/: .README.txt  CMakeLists.txt  README  README.md
GeneratePopulation/include/: cellSection.hh  forceSection.hh  meshSection.hh  simulationEnvironment.hh  simulationSection.hh  spheroidSection.hh  unitSection.hh
GeneratePopulation/src/: main.cc  simulationEnvironment.cc
NanoparticleRadiation/: .README.txt  CMakeLists.txt  README  README.md
NanoparticleRadiation/data/: run.mac
NanoparticleRadiation/include/: DetectorConstruction.hh  DetectorConstructionMessenger.hh
NanoparticleRadiation/src/: DetectorConstruction.cc  DetectorConstructionMessenger.cc  main.cc
TargetedAlphaTherapy/: .README.txt  CMakeLists.txt  README
TargetedAlphaTherapy/.cache/clangd/index/: DetectorConstruction.cc.CC676A6E1141F0DD.idx  DetectorConstruction.hh.52942D76BA09B9B9.idx  DetectorConstructionMessenger.cc.23D3FB00C0765814.idx  DetectorConstructionMessenger.hh.AC87B90A7322D3F8.idx  main.cc.EA5F4E270794042E.idx
TargetedAlphaTherapy/data/: run.mac
TargetedAlphaTherapy/include/: DetectorConstruction.hh  DetectorConstructionMessenger.hh  G4ElectronCapture.hh
TargetedAlphaTherapy/src/: DetectorConstruction.cc  DetectorConstructionMessenger.cc  main.cc
UniformRadiation/: .README.txt  CMakeLists.txt  README
UniformRadiation/include/: DetectorConstruction.hh  DetectorConstructionMessenger.hh
UniformRadiation/src/: DetectorConstruction.cc  DetectorConstructionMessenger.cc  main.cc
(+5 files in other folders)
